# pdf2joplin

./: .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
.scripts/: change_version.sh
src/: constants.py  main.py  models.py  utils.py  validation.py
